
[package]
name = "ao"
version = "0.6.1"
authors = [ "peter@taricorp.net" ]
license = "BSD-2-Clause"

description = "Bindings to Xiph.org's libao"
documentation = "http://rustdoc.taricorp.net/ao/ao/"
repository = "https://bitbucket.org/tari/rust-ao/"
readme = "README.md"
keywords = ["audio", "bindings"]

[lib]
name = "ao"
path = "src/lib.rs"

[dependencies]
libc = "*"
